--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <article class="card">
                                 <figure>
                                     <img
-                                        src="images/autumn.jpg"
+                                        src="assets/icons/to-do-list.png"
                                         alt="Preview"
                                         title="Preview"
                                     />
