--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     <img
                                         src="assets/icons/match.png"
                                         alt="Preview"
-                                        title="Preview"
+                                        title="Match-list"
                                     />
                                 </figure>
                             </article>
@@ -242,7 +242,7 @@
                                     <img
                                         src="assets/icons/to-do-list.png"
                                         alt="Preview"
-                                        title="Preview"
+                                        title="To-do-list"
                                     />
                                 </figure>
                             </article>
@@ -251,8 +251,32 @@
                         </section>      
                 </div>
                 <div>
-                    <h1>CSS</h1>
+                    <h1>PYTHON</h1>
+                    <span class="background">
+                        <section class="gallery">
+                            <article class="card">
+                                <figure>
+                                    <img
+                                        src="assets/icons/player.png"
+                                        alt="Preview"
+                                        title="MP3 Player"
+                                    />
+                                </figure>
+                            </article>
+                            <article class="card">
+                                <figure>
+                                    <img
+                                        src="assets/icons/tasklist.png"
+                                        alt="Preview"
+                                        title="tasklist"
+                                    />
+                                </figure>
+                            </article>
+                            <!--? more picture here  -->
+                            <!-- Pictures from Freepik -->
+                        </section>      
                 </div>
+                
         </main>
 
 </body>
