--- a/index.html
+++ b/index.html
@@ -217,7 +217,15 @@
                                     />
                                 </figure>
                             </article>
-                          
+                            <article class="card">
+                                <figure>
+                                    <img
+                                        src="assets/icons/gerador.png"
+                                        alt="Preview"
+                                        title="Gerador de senha"
+                                    />
+                                </figure>
+                            </article>
                             
                             <!--? more picture here  -->
                             <!-- Pictures from Freepik -->
