--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 </div>
                 <div>
                     <h1>CSS</h1>
-                    <span class="background">
+                    <!-- <span class="background">
                         <section class="gallery">
                             <article class="card">
                                 <figure>
@@ -381,7 +381,7 @@
                                     />
                                 </figure>
                             </article>
-                                                       
+                                                        -->
                             <!--? more picture here  -->
                             <!-- Pictures from Freepik -->
                         </section>      
