--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </aside>
 
 
-    <a href="./public/works.html">
+    <a href="./works.html">
         <h1>Look On My Works <span class="material-symbols-outlined">
             arrow_outward
             </span></h1>
