--- a/works.html
+++ b/works.html
@@ -40,7 +40,7 @@
                     <article class="card">
                         <figure>
                             <img
-                                src="/assets/icons/nanaygames.png"
+                                src="assets/icons/nanaygames.png"
                                 alt="Preview"
                                 title="E-COMMERCE"
                             />
@@ -49,7 +49,7 @@
                     <article class="card">
                         <figure>
                             <img
-                                src="/assets/icons/streaming.png"
+                                src="assets/icons/streaming.png"
                                 alt="Preview"
                                 title="STREAMING"
                             />
@@ -58,7 +58,7 @@
                     <article class="card">
                         <figure>
                             <img
-                                src="/assets/icons/review.png"
+                                src="assets/icons/review.png"
                                 alt="Preview"
                                 title="REVIEWS"
                             />
@@ -66,7 +66,7 @@
                     </article>
                     <article class="card">
                         <img
-                            src="/assets/icons/portalifpb.png"
+                            src="assets/icons/portalifpb.png"
                             alt="Preview"
                             title="INSTITUCIONAL"
                         />
@@ -86,7 +86,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/weather.png"
+                                    src="assets/icons/weather.png"
                                     alt="Preview"
                                     title="WEATHER APP"
                                 />
@@ -95,7 +95,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/alarme.png"
+                                    src="assets/icons/alarme.png"
                                     alt="Preview"
                                     title="ALARME"
                                 />
@@ -113,7 +113,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/match.png"
+                                    src="assets/icons/match.png"
                                     alt="Preview"
                                     title="Match-list"
                                 />
@@ -122,7 +122,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/to-do-list.png"
+                                    src="assets/icons/to-do-list.png"
                                     alt="Preview"
                                     title="To-do-list"
                                 />
@@ -137,7 +137,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/player.png"
+                                    src="assets/icons/player.png"
                                     alt="Preview"
                                     title="MP3 Player"
                                 />
@@ -146,7 +146,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/tasklist.png"
+                                    src="assets/icons/tasklist.png"
                                     alt="Preview"
                                     title="tasklist"
                                 />
@@ -163,7 +163,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/gerador.png"
+                                    src="assets/icons/gerador.png"
                                     alt="Preview"
                                     title="Gerador de senha"
                                 />
@@ -172,7 +172,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/conversor_temperaturas.png"
+                                    src="assets/icons/conversor_temperaturas.png"
                                     alt="Preview"
                                     title="Conversor de temperaturas"
                                 />
@@ -181,7 +181,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/pesquisa.png"
+                                    src="assets/icons/pesquisa.png"
                                     alt="Preview"
                                     title="Caixa de pesquisa"
                                 />
@@ -190,7 +190,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/num_invertido.png"
+                                    src="assets/icons/num_invertido.png"
                                     alt="Preview"
                                     title="Inversor de numero"
                                 />
@@ -199,7 +199,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/tasklistsimples.png"
+                                    src="assets/icons/tasklistsimples.png"
                                     alt="Preview"
                                     title="Task list Simples"
                                 />
@@ -208,7 +208,7 @@
                         <article class="card">
                             <figure>
                                 <img
-                                    src="/assets/icons/vogais.png"
+                                    src="assets/icons/vogais.png"
                                     alt="Preview"
                                     title="Contados de vogais"
                                 />
