--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h1>Hi! Gustavo here</h1>
 
             <h1>A Software Engineer, Future Professor and Researcher</h1>
-            <h2>Read <a href="http://">more</a> about me</h2>
+            <h2>Read <a href="./aboutme.html">more</a> about me</h2>
 
         </div>
         
