--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div id="conteiner">
            
                 <ul>
-                    <li><a href="#">ABOUT ME</a></li>
-                    <li><a href="#">BOOKMARKS</a></li>
+                    <li><a href="./aboutme.html">ABOUT ME</a></li>
+                    <li><a href="./bookmarks.html">BOOKMARKS</a></li>
                     <li><a href="#">ACADEMIC</a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
