--- a/bookmarks.html
+++ b/bookmarks.html
@@ -43,5 +43,18 @@
     
         </div>
     </nav>
+
+    <h1>Bookmarks</h1>
+    <h2>Here's a little bit of everything I've consumed in my training. Fun stuff that may or may not serve as a recommendation. I hope it motivates you!</h2>
+
+    <div class="photo-grid">                
+        <div>
+                <img src="assets/icons/rdr2.jfif" alt="Imagem 1">
+                <h3>Red Dead Redemtion 2</h3>
+                <h3>2020</h3>
+                   
+                <button>#videogame</button> 
+        </div>
+
 </body>
 </html>
