--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
            
                 <ul>
                     <li><a href="#">ABOUT ME</a></li>
-                    <li><a href="#">BOOKMARKS</a></li>
+                    <li><a href="./bookmarks.html">BOOKMARKS</a></li>
                     <li><a href="#">ACADEMIC</a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
