--- a/aboutme.html
+++ b/aboutme.html
@@ -48,15 +48,15 @@
 
     <h1>About Me</h1>
     
-    <img   id="img" src="assets/icons/lancha.JPG" alt="">
+    <img   id="img" src="assets/icons/eunapraia.JPG" alt="">
 
-    <h2>For those who don't know me, my name is Gustavo David Cesário. Born and live in Brazil.</h2>
+    <h2>For those who don't know me, my name is Gustavo David. Born and live in Brazil.</h2>
 
-    <h2>I enjoy playing video games, mainly history and football. I also enjoy watching series and movies. Fiction and fantasy. I'm passionate about sitcoms such as Friends, How I met your mother and Big bang theory.</h2>
+    <h2>I enjoy playing video games and football. I also enjoy watching series and movies. Fiction and fantasy. I'm passionate about sitcoms such as Friends, How I met your mother and Big bang theory.</h2>
 
     <h2>I'm a fan of Flamengo and crazy about this team.</h2>
     <h2>I love traveling and meeting new people. Dance parties and something more relaxed suit me a lot.</h2>
-    <h2>I'm majoring in Systems Analysis and Development at the Federal Institute of Paraiba. Later I intend to do a postgraduate course and become a teacher.</h2>
+    <h2>I'm majoring in Systems Analysis and Development at the Federal Institute of Paraiba. Later I intend to do a postgraduate course and become a professor.</h2>
 </main>
   
 </body>
