feat:linkando_works

--- a/works.html
+++ b/works.html
@@ -39,11 +39,14 @@
                 <section class="gallery">
                     <article class="card">
                         <figure>
-                            <img
+                            <a href="https://gustavobardavid.github.io/site-de-ecommerce/">
+
+                                <img
                                 src="assets/icons/nanaygames.png"
                                 alt="Preview"
                                 title="E-COMMERCE"
-                            />
+                                />
+                            </a>
                         </figure>
                     </article>
                     <article class="card">
