--- a/works.html
+++ b/works.html
@@ -175,7 +175,11 @@
             </div>
 
             <div>
-                <h1>JavaScript PROJECTS</h1>
+                <a href="https://java-script-eight-mu.vercel.app/">
+
+                    <h1>JavaScript(Clique aqui)</h1>
+                
+                </a>
                 <span class="background">
                     <section class="gallery">
                         <article class="card">
