Adicionando novos projetos

--- a/works.html
+++ b/works.html
@@ -97,10 +97,10 @@
                     <section class="gallery">
                         <article class="card">
                             <figure>
-                                <a href="https://github.com/gustavobardavid/weatherapp">
+                                <a href="https://github.com/gustavobardavid/weatherapp_v2">
 
                                     <img
-                                    src="assets/icons/weather.png"
+                                    src="assets/icons/weatherappv2.png"
                                     alt="Preview"
                                     title="WEATHER APP"
                                     />
@@ -113,6 +113,33 @@
                                     src="assets/icons/alarme.png"
                                     alt="Preview"
                                     title="ALARME"
+                                />
+                            </figure>
+                        </article>
+                        <article class="card">
+                            <figure>
+                                <img
+                                    src="assets/icons/pokedex.png"
+                                    alt="pokedex"
+                                    title="POKEDEX"
+                                />
+                            </figure>
+                        </article>
+                        <article class="card">
+                            <figure>
+                                <img
+                                    src="assets/icons/onepiece.png"
+                                    alt="pokedex"
+                                    title="POKEDEX"
+                                />
+                            </figure>
+                        </article>
+                        <article class="card">
+                            <figure>
+                                <img
+                                    src="assets/icons/onepiece.png"
+                                    alt="pokedex"
+                                    title="POKEDEX"
                                 />
                             </figure>
                         </article>
@@ -182,6 +209,18 @@
                 </a>
                 <span class="background">
                     <section class="gallery">
+                        <article class="card">
+                            <figure>
+                                <a href="https://github.com/gustavobardavid/weatherapp">
+
+                                    <img
+                                    src="assets/icons/weather.png"
+                                    alt="Preview"
+                                    title="WEATHER APP"
+                                    />
+                                </a>
+                            </figure>
+                        </article>
                         <article class="card">
                             <figure>
                                 <img
